added landing page description

--- a/index.html
+++ b/index.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Zoom to Class Releases</title>
-    </head>
-    <body>
-        <h1>The latest release is Zoom to Class version 2.2</h1>
-        <h3>Select your operating system below to download the app!</h3>
-        <ul>
-            <li>
-                <a href="releases/Zoom To Class.exe" download>Windows</a>
-            </li>
-            <li>
-                <a href="https://apps.apple.com/us/app/id1534495183">Mac OS app store download</a>
-            </li>
-            <li>
-                <a href="https://apps.apple.com/us/app/id1534495183">iOS</a>
-            </li>
-            <!-- <li>
+
+<head>
+    <title>Zoom to Class Releases</title>
+</head>
+
+<body>
+    <h1>The latest release is Zoom to Class version 2.2</h1>
+    <h3>Select your operating system below to download the app!</h3>
+    <ul>
+        <li>
+            <a href="releases/Zoom To Class.exe" download>Windows</a>
+        </li>
+        <li>
+            <a href="https://apps.apple.com/us/app/id1534495183">Mac OS app store download</a>
+        </li>
+        <li>
+            <a href="https://apps.apple.com/us/app/id1534495183">iOS</a>
+        </li>
+        <!-- <li>
                 <a href="https://www.google.com/search?q=todo">Android</a>
             </li>
             <li>
                 <a href="releases/Zoom To Class.dmg" download>Linux</a>
             </li> -->
-            <li>
-                Android (Coming soon!)
-            </li>
-            <li>
-                Linux (Coming soon!)
-            </li>
-            <li>
-                <a href="releases/Zoom To Class.dmg" download>Mac OS direct download</a>
-            </li>
-        </ul>
-    </body>
+        <li>
+            Android (Coming soon!)
+        </li>
+        <li>
+            Linux (Coming soon!)
+        </li>
+        <li>
+            <a href="releases/Zoom To Class.dmg" download>Mac OS direct download</a>
+        </li>
+    </ul>
+
+    <br><br>
+    <h1>What is Zoom to Class?</h1>
+    <p>
+        Zoom to class is the easiest, fastest way to get to your virtual class on time. No more digging through your
+        email inbox or teacher's website to find the class Zoom link! Now, you can simply put your class links into this
+        app, then it will give you a link to the right class, at the right time!
+        <br>
+        To get started, open the app and click on settings in the top left. Then, simply enter the names of each of your
+        classes, and the corresponding Zoom or Google Meet links. Now, whenever you open the app, it will display the
+        name of whichever class is happening right now. Simply click on the open button, and Zoom to Class!
+    </p>
+</body>
+
 </html>
