--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>Select your operating system below to download the app!</h3>
     <ul>
         <li>
-            <a href="releases/Zoom To Class.exe" download>Windows</a>
+            <a href="releases/Zoom to Class.exe" download>Windows</a>
         </li>
         <li>
             <a href="https://apps.apple.com/us/app/id1534495183">Mac OS app store download</a>
