updated releases page for windows install info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="releases/Zoom To Class.dmg" download>Linux</a>
             </li> -->
         <li>
-            Android (Coming soon!)
+            Android/Chromebook (Coming soon!)
         </li>
         <li>
             Linux (Coming soon!)
@@ -45,6 +45,16 @@
         To get started, open the app and click on settings in the top left. Then, simply enter the names of each of your
         classes, and the corresponding Zoom or Google Meet links. Now, whenever you open the app, it will display the
         name of whichever class is happening right now. Simply click on the open button, and Zoom to Class!
+    </p>
+    <br>
+    <h1>Installing on Windows</h1>
+    <p>
+        Unfortunately, my application is not code signed for Windows. In short, what this means is that Windows will not
+        trust it and will give you a pop up saying "Windows protected your PC." You need to click "more info" then click "Run
+        anyway" to install Zoom to Class. I promise that this app will not give you any malware, but in order to avoid
+        this popup, I would need to personally buy a code signing certificate which costs upwards of $100 per year. If
+        you want to help fund my purcahse, then feel free to click <a
+            href="https://www.paypal.com/paypalme/paysampw" target="_blank">here</a>!
     </p>
 </body>
 
