Reworded index.html slightly

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         trust it and will give you a pop up saying "Windows protected your PC." You need to click "more info" then click "Run
         anyway" to install Zoom to Class. I promise that this app will not give you any malware, but in order to avoid
         this popup, I would need to personally buy a code signing certificate which costs upwards of $100 per year. If
-        you want to help fund my purcahse, then feel free to click <a
+        you want to help fund my development, then feel free to click <a
             href="https://www.paypal.com/paypalme/paysampw" target="_blank">here</a>!
     </p>
 </body>
