Added margin to left

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="margin-left:8px">
     <h1>The latest release is Zoom to Class version 2.2</h1>
     <h3>Select your operating system below to download the app!</h3>
     <ul>
